--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.0",
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
