--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.3.0",
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
